--- a/Displays/ImageViewers/ComponentsUI/FreeHandROI/GraphicsItem.html
+++ b/Displays/ImageViewers/ComponentsUI/FreeHandROI/GraphicsItem.html
@@ -162,7 +162,8 @@ class GraphicsItem(QGraphicsObject):
         Applies new intensity and contrast values to the image.
 
         A new QPixmap object is formed from the pixel array with the
-        new contrast &amp; intensity values.
+        new contrast &amp; intensity values.  Then the image is repainted
+        so to display this new QPixmap object.
 
         Input arguments
         ***************
@@ -883,7 +884,8 @@ class GraphicsItem(QGraphicsObject):
         Applies new intensity and contrast values to the image.
 
         A new QPixmap object is formed from the pixel array with the
-        new contrast &amp; intensity values.
+        new contrast &amp; intensity values.  Then the image is repainted
+        so to display this new QPixmap object.
 
         Input arguments
         ***************
@@ -2472,7 +2474,9 @@ making it appear red.</p></div>
 <dd>
 <div class="desc"><p>Applies new intensity and contrast values to the image.</p>
 <p>A new QPixmap object is formed from the pixel array with the
-new contrast &amp; intensity values.</p>
+new contrast &amp; intensity values.
+Then the image is repainted
+so to display this new QPixmap object.</p>
 <p>Input arguments</p>
 <hr>
 <p>intensity - integer representing the image intensity value
@@ -2487,7 +2491,8 @@ roi - pixel array of the ROI on the image</p></div>
     Applies new intensity and contrast values to the image.
 
     A new QPixmap object is formed from the pixel array with the
-    new contrast &amp; intensity values.
+    new contrast &amp; intensity values.  Then the image is repainted
+    so to display this new QPixmap object.
 
     Input arguments
     ***************
