--- a/Displays/ImageViewers/ComponentsUI/FreeHandROI/ROI_Storage.html
+++ b/Displays/ImageViewers/ComponentsUI/FreeHandROI/ROI_Storage.html
@@ -115,6 +115,8 @@ class ROIs():
         &#34;&#34;&#34;
         For a given ROI and image, the existing mask is replaced by the new
         mask in the input argument, newMask.
+
+        This function is not used. 
         &#34;&#34;&#34;
         logger.info(&#34;ROI_Storage.replaceMask called&#34;)
         try:
@@ -495,6 +497,8 @@ object hosting the ROIs object</p></div>
         &#34;&#34;&#34;
         For a given ROI and image, the existing mask is replaced by the new
         mask in the input argument, newMask.
+
+        This function is not used. 
         &#34;&#34;&#34;
         logger.info(&#34;ROI_Storage.replaceMask called&#34;)
         try:
@@ -1148,7 +1152,8 @@ key in the dictMasks dictionary.</p></div>
 </code></dt>
 <dd>
 <div class="desc"><p>For a given ROI and image, the existing mask is replaced by the new
-mask in the input argument, newMask.</p></div>
+mask in the input argument, newMask.</p>
+<p>This function is not used.</p></div>
 <details class="source">
 <summary>
 <span>Expand source code</span>
@@ -1157,6 +1162,8 @@ mask in the input argument, newMask.</p></div>
     &#34;&#34;&#34;
     For a given ROI and image, the existing mask is replaced by the new
     mask in the input argument, newMask.
+
+    This function is not used. 
     &#34;&#34;&#34;
     logger.info(&#34;ROI_Storage.replaceMask called&#34;)
     try:
