--- a/Displays/ImageViewers/ComponentsUI/ImageLevelsSpinBoxes.html
+++ b/Displays/ImageViewers/ComponentsUI/ImageLevelsSpinBoxes.html
@@ -55,7 +55,13 @@ class ImageLevelsSpinBoxes:
     The pair of spinboxes can be returned to the module hosting this composite component
     using the .getSpinBoxes function.
     &#34;&#34;&#34;
-    def __init__(self): 
+    def __init__(self):
+        &#34;&#34;&#34;
+        Creates the composite widget for the display and adjustment of
+        image intensity and contrast.
+
+        Two spinboxes and associated labels are added to a horizontal layout
+        &#34;&#34;&#34;
         try:
             logger.info(&#34;created ImageLevelsSpinBoxes object.&#34;)
 
@@ -151,7 +157,10 @@ and contrast of an image.</p>
 <p>The composite component, two spinboxes in a horizontal layout, is returned
 to the calling function using the getCompositeComponent function. </p>
 <p>The pair of spinboxes can be returned to the module hosting this composite component
-using the .getSpinBoxes function.</p></div>
+using the .getSpinBoxes function.</p>
+<p>Creates the composite widget for the display and adjustment of
+image intensity and contrast.</p>
+<p>Two spinboxes and associated labels are added to a horizontal layout</p></div>
 <details class="source">
 <summary>
 <span>Expand source code</span>
@@ -173,7 +182,13 @@ using the .getSpinBoxes function.</p></div>
     The pair of spinboxes can be returned to the module hosting this composite component
     using the .getSpinBoxes function.
     &#34;&#34;&#34;
-    def __init__(self): 
+    def __init__(self):
+        &#34;&#34;&#34;
+        Creates the composite widget for the display and adjustment of
+        image intensity and contrast.
+
+        Two spinboxes and associated labels are added to a horizontal layout
+        &#34;&#34;&#34;
         try:
             logger.info(&#34;created ImageLevelsSpinBoxes object.&#34;)
 
