--- a/Displays/ImageViewers/ImageViewerROI.html
+++ b/Displays/ImageViewers/ImageViewerROI.html
@@ -411,7 +411,7 @@ class ImageViewerROI(QMdiSubWindow):
             self.weasel.progressBar.set_maximum(len(inputPath))
             (subjectID, studyID, seriesID) = self.weasel.objXMLReader.getImageParentIDs(inputPath[0])
             seriesID = str(int(self.weasel.objXMLReader.getStudy(subjectID, studyID)[-1].attrib[&#39;id&#39;].split(&#39;_&#39;)[0]) + 1)
-            seriesUID = SaveDICOM_Image.generateUIDs(ReadDICOM_Image.getDicomDataset(inputPath[0]), seriesID)
+            seriesUID = SaveDICOM_Image.generateUIDs(ReadDICOM_Image.getDicomDataset(inputPath[0]), seriesNumber=seriesID)[1]
             for index, path in enumerate(inputPath):
                 self.weasel.progressBar.set_value(index)
                 outputPath = SaveDICOM_Image.returnFilePath(path, suffix)
@@ -1576,7 +1576,7 @@ vertical layout created in the function setUpMainLayout.</p></div>
             self.weasel.progressBar.set_maximum(len(inputPath))
             (subjectID, studyID, seriesID) = self.weasel.objXMLReader.getImageParentIDs(inputPath[0])
             seriesID = str(int(self.weasel.objXMLReader.getStudy(subjectID, studyID)[-1].attrib[&#39;id&#39;].split(&#39;_&#39;)[0]) + 1)
-            seriesUID = SaveDICOM_Image.generateUIDs(ReadDICOM_Image.getDicomDataset(inputPath[0]), seriesID)
+            seriesUID = SaveDICOM_Image.generateUIDs(ReadDICOM_Image.getDicomDataset(inputPath[0]), seriesNumber=seriesID)[1]
             for index, path in enumerate(inputPath):
                 self.weasel.progressBar.set_value(index)
                 outputPath = SaveDICOM_Image.returnFilePath(path, suffix)
@@ -3242,7 +3242,7 @@ a new DICOM series.</p></div>
         self.weasel.progressBar.set_maximum(len(inputPath))
         (subjectID, studyID, seriesID) = self.weasel.objXMLReader.getImageParentIDs(inputPath[0])
         seriesID = str(int(self.weasel.objXMLReader.getStudy(subjectID, studyID)[-1].attrib[&#39;id&#39;].split(&#39;_&#39;)[0]) + 1)
-        seriesUID = SaveDICOM_Image.generateUIDs(ReadDICOM_Image.getDicomDataset(inputPath[0]), seriesID)
+        seriesUID = SaveDICOM_Image.generateUIDs(ReadDICOM_Image.getDicomDataset(inputPath[0]), seriesNumber=seriesID)[1]
         for index, path in enumerate(inputPath):
             self.weasel.progressBar.set_value(index)
             outputPath = SaveDICOM_Image.returnFilePath(path, suffix)
