--- a/CoreModules/TreeView.html
+++ b/CoreModules/TreeView.html
@@ -304,7 +304,7 @@ class TreeView():
 
     def _unCheckTreeViewItems(self, item):
         &#34;&#34;&#34;This function uses recursion to set the state of child checkboxes 
-        of item to unchecked.
+        of item to unchecked.  An item could represent a subject, study or series.
         
          Input Parameters
         ****************
@@ -724,7 +724,7 @@ tree view showing a visual representation of that file structure.</p></div>
 
     def _unCheckTreeViewItems(self, item):
         &#34;&#34;&#34;This function uses recursion to set the state of child checkboxes 
-        of item to unchecked.
+        of item to unchecked.  An item could represent a subject, study or series.
         
          Input Parameters
         ****************
