--- a/CoreModules/XMLConfigReader.html
+++ b/CoreModules/XMLConfigReader.html
@@ -51,6 +51,7 @@ class XMLConfigReader:
 
 
     def __repr__(self):
+       &#34;&#34;&#34;Represents this class&#39;s objects as a string&#34;&#34;&#34;
        return &#39;{}, {!r}&#39;.format(
            self.__class__.__name__,
            self.fullFilePath)
@@ -117,6 +118,7 @@ class XMLConfigReader:
 
 
     def __repr__(self):
+       &#34;&#34;&#34;Represents this class&#39;s objects as a string&#34;&#34;&#34;
        return &#39;{}, {!r}&#39;.format(
            self.__class__.__name__,
            self.fullFilePath)
