--- a/CoreModules/XMLMenuReader.html
+++ b/CoreModules/XMLMenuReader.html
@@ -57,6 +57,7 @@ class XMLMenuReader:
 
 
     def __repr__(self):
+       &#34;&#34;&#34;Represents this class&#39;s objects as a string&#34;&#34;&#34;
        return &#39;{}, {!r}&#39;.format(
            self.__class__.__name__,
            self.fullFilePath)
@@ -110,6 +111,7 @@ class XMLMenuReader:
 
 
     def __repr__(self):
+       &#34;&#34;&#34;Represents this class&#39;s objects as a string&#34;&#34;&#34;
        return &#39;{}, {!r}&#39;.format(
            self.__class__.__name__,
            self.fullFilePath)
