--- a/CoreModules/index.html
+++ b/CoreModules/index.html
@@ -73,7 +73,7 @@ define the appearance and behaviour of the PyQt widgets in the Weasel GUI …</p
 </dd>
 <dt><code class="name"><a title="Weasel.CoreModules.WeaselXMLReader" href="WeaselXMLReader.html">Weasel.CoreModules.WeaselXMLReader</a></code></dt>
 <dd>
-<div class="desc"><p>Class for reading, editing and writing the XML file summarising
+<div class="desc"><p>Class for reading, editing and writing to the XML file summarising
 the contents of a DICOM folder.</p></div>
 </dd>
 <dt><code class="name"><a title="Weasel.CoreModules.WriteXMLfromDICOM" href="WriteXMLfromDICOM.html">Weasel.CoreModules.WriteXMLfromDICOM</a></code></dt>
