--- a/Displays/ImageViewers/ImageViewer.html
+++ b/Displays/ImageViewers/ImageViewer.html
@@ -483,14 +483,24 @@ class ImageViewer(QMdiSubWindow):
                 if ((len(np.shape(self.pixelArray)) == 2) 
                     and y_i &gt;= 0 and y_i &lt; self.pixelArray.shape [ 1 ] 
                     and x_i &gt;= 0 and x_i &lt; self.pixelArray.shape [ 0 ]): 
+                        #in self.pixelArray[], the coordinates are used in the order [y,x]
+                        #to obay the numpy [row, col] array element ordering
                         self.lblPixelValue.setText(
-                        &#34;&lt;h4&gt; {} @ X: {}, Y: {}, Z: {} ({})&lt;/h4&gt;&#34;.format (self.pixelArray[ x_i, y_i ],x_i, correctedYCoord, z_i, ReadDICOM_Image.getImageTagValue(self.selectedImagePath, &#34;SliceLocation&#34;)))
+                        &#34;&lt;h4&gt; {} @ X: {}, Y: {}, Z: {} ({})&lt;/h4&gt;&#34;.format (
+                            self.pixelArray[ y_i, x_i ],x_i, 
+                            correctedYCoord, z_i, 
+                            ReadDICOM_Image.getImageTagValue(self.selectedImagePath, &#34;SliceLocation&#34;)))
                 elif ((len(np.shape(self.pixelArray)) == 3) 
                         and x_i &gt;= 0 and x_i &lt; self.pixelArray.shape [ 1 ] 
                         and y_i &gt;= 0 and y_i &lt; self.pixelArray.shape [ 2 ]):
                             z_i = math.floor(self.graphicsView.timeIndex(self.graphicsView.timeLine)[1])
+                            #in self.pixelArray[], the coordinates are used in the order [y,x]
+                            #to obay the numpy [row, col] array element ordering
                             self.lblPixelValue.setText(
-                                &#34;&lt;h4&gt; {} @ X: {}, Y: {}, Z: {} ({})&lt;/h4&gt;&#34;.format (self.pixelArray[ x_i, y_i ],x_i, correctedYCoord, z_i, ReadDICOM_Image.getImageTagValue(self.selectedImagePath, &#34;SliceLocation&#34;)))
+                                &#34;&lt;h4&gt; {} @ X: {}, Y: {}, Z: {} ({})&lt;/h4&gt;&#34;.format (
+                                    self.pixelArray[ y_i, x_i ],x_i, 
+                                    correctedYCoord, z_i,
+                                    ReadDICOM_Image.getImageTagValue(self.selectedImagePath, &#34;SliceLocation&#34;)))
                 else:
                     self.lblPixelValue.setText(&#34;&#34;)
             else:
@@ -1685,14 +1695,24 @@ vertical layout created in the function setUpMainLayout.</p></div>
                 if ((len(np.shape(self.pixelArray)) == 2) 
                     and y_i &gt;= 0 and y_i &lt; self.pixelArray.shape [ 1 ] 
                     and x_i &gt;= 0 and x_i &lt; self.pixelArray.shape [ 0 ]): 
+                        #in self.pixelArray[], the coordinates are used in the order [y,x]
+                        #to obay the numpy [row, col] array element ordering
                         self.lblPixelValue.setText(
-                        &#34;&lt;h4&gt; {} @ X: {}, Y: {}, Z: {} ({})&lt;/h4&gt;&#34;.format (self.pixelArray[ x_i, y_i ],x_i, correctedYCoord, z_i, ReadDICOM_Image.getImageTagValue(self.selectedImagePath, &#34;SliceLocation&#34;)))
+                        &#34;&lt;h4&gt; {} @ X: {}, Y: {}, Z: {} ({})&lt;/h4&gt;&#34;.format (
+                            self.pixelArray[ y_i, x_i ],x_i, 
+                            correctedYCoord, z_i, 
+                            ReadDICOM_Image.getImageTagValue(self.selectedImagePath, &#34;SliceLocation&#34;)))
                 elif ((len(np.shape(self.pixelArray)) == 3) 
                         and x_i &gt;= 0 and x_i &lt; self.pixelArray.shape [ 1 ] 
                         and y_i &gt;= 0 and y_i &lt; self.pixelArray.shape [ 2 ]):
                             z_i = math.floor(self.graphicsView.timeIndex(self.graphicsView.timeLine)[1])
+                            #in self.pixelArray[], the coordinates are used in the order [y,x]
+                            #to obay the numpy [row, col] array element ordering
                             self.lblPixelValue.setText(
-                                &#34;&lt;h4&gt; {} @ X: {}, Y: {}, Z: {} ({})&lt;/h4&gt;&#34;.format (self.pixelArray[ x_i, y_i ],x_i, correctedYCoord, z_i, ReadDICOM_Image.getImageTagValue(self.selectedImagePath, &#34;SliceLocation&#34;)))
+                                &#34;&lt;h4&gt; {} @ X: {}, Y: {}, Z: {} ({})&lt;/h4&gt;&#34;.format (
+                                    self.pixelArray[ y_i, x_i ],x_i, 
+                                    correctedYCoord, z_i,
+                                    ReadDICOM_Image.getImageTagValue(self.selectedImagePath, &#34;SliceLocation&#34;)))
                 else:
                     self.lblPixelValue.setText(&#34;&#34;)
             else:
@@ -3144,14 +3164,24 @@ lblPixelValue together with the x,y coordinates of the mouse pointer.</p></div>
             if ((len(np.shape(self.pixelArray)) == 2) 
                 and y_i &gt;= 0 and y_i &lt; self.pixelArray.shape [ 1 ] 
                 and x_i &gt;= 0 and x_i &lt; self.pixelArray.shape [ 0 ]): 
+                    #in self.pixelArray[], the coordinates are used in the order [y,x]
+                    #to obay the numpy [row, col] array element ordering
                     self.lblPixelValue.setText(
-                    &#34;&lt;h4&gt; {} @ X: {}, Y: {}, Z: {} ({})&lt;/h4&gt;&#34;.format (self.pixelArray[ x_i, y_i ],x_i, correctedYCoord, z_i, ReadDICOM_Image.getImageTagValue(self.selectedImagePath, &#34;SliceLocation&#34;)))
+                    &#34;&lt;h4&gt; {} @ X: {}, Y: {}, Z: {} ({})&lt;/h4&gt;&#34;.format (
+                        self.pixelArray[ y_i, x_i ],x_i, 
+                        correctedYCoord, z_i, 
+                        ReadDICOM_Image.getImageTagValue(self.selectedImagePath, &#34;SliceLocation&#34;)))
             elif ((len(np.shape(self.pixelArray)) == 3) 
                     and x_i &gt;= 0 and x_i &lt; self.pixelArray.shape [ 1 ] 
                     and y_i &gt;= 0 and y_i &lt; self.pixelArray.shape [ 2 ]):
                         z_i = math.floor(self.graphicsView.timeIndex(self.graphicsView.timeLine)[1])
+                        #in self.pixelArray[], the coordinates are used in the order [y,x]
+                        #to obay the numpy [row, col] array element ordering
                         self.lblPixelValue.setText(
-                            &#34;&lt;h4&gt; {} @ X: {}, Y: {}, Z: {} ({})&lt;/h4&gt;&#34;.format (self.pixelArray[ x_i, y_i ],x_i, correctedYCoord, z_i, ReadDICOM_Image.getImageTagValue(self.selectedImagePath, &#34;SliceLocation&#34;)))
+                            &#34;&lt;h4&gt; {} @ X: {}, Y: {}, Z: {} ({})&lt;/h4&gt;&#34;.format (
+                                self.pixelArray[ y_i, x_i ],x_i, 
+                                correctedYCoord, z_i,
+                                ReadDICOM_Image.getImageTagValue(self.selectedImagePath, &#34;SliceLocation&#34;)))
             else:
                 self.lblPixelValue.setText(&#34;&#34;)
         else:
