--- a/Displays/ImageViewers/ComponentsUI/PixelValueLabel.html
+++ b/Displays/ImageViewers/ComponentsUI/PixelValueLabel.html
@@ -40,6 +40,7 @@ class PixelValueComponent:
         self.pixelValueLayout.setSpacing(0)
 
         self.lblPixelValue = QLabel()
+        self.lblPixelValue.setWordWrap(True)
         self.lblPixelValue.setMargin(0)
         self.lblPixelValue.setStyleSheet(
             &#34;color : red; padding-left:0; margin-left:0; padding-right:0; margin-right:0; font-size:8pt;&#34;)
@@ -88,6 +89,7 @@ of the value of the pixel under the mouse pointer.</p></div>
         self.pixelValueLayout.setSpacing(0)
 
         self.lblPixelValue = QLabel()
+        self.lblPixelValue.setWordWrap(True)
         self.lblPixelValue.setMargin(0)
         self.lblPixelValue.setStyleSheet(
             &#34;color : red; padding-left:0; margin-left:0; padding-right:0; margin-right:0; font-size:8pt;&#34;)
